################################################################################
# Copyright (c) 2015 Blaine Rister et al., see LICENSE for details.
################################################################################
# Build file for code snippets 
################################################################################

install (FILES sep_fir_3d.template DESTINATION include/sift3d/templates)
