################################################################################
# Copyright (c) 2015-2016 Blaine Rister et al., see LICENSE for details.
################################################################################
# Build file for code snippets 
################################################################################

install (FILES sep_fir_3d.template DESTINATION ${INSTALL_INCLUDE_DIR}/templates)
